@@ -41,6 +41,7 @@ class Callable EXTEND_GC
 public:
     virtual ~Callable() {}
     virtual Object call(VM* vm, int argc, const Object* argv) = 0;
+    Object returnCode[2]; // ugly
 };
 
 
