@@ -1,3 +1,9 @@
+2008-08-16  higepon  <higepon@users.sourceforge.jp>
+
+        * ProcedureMacro.h: Added.
+
+        * RecordProcedures.cpp: Replaced all RAISE to assertion-violation and added tests for them.
+
 2008-08-15  higepon  <higepon@users.sourceforge.jp>
 
         * ViolationProcedures.cpp (scheme::throwEx): Added (throw ...) procedure.
